--- a/static/template/ktemp.html
+++ b/static/template/ktemp.html
@@ -15,7 +15,7 @@
             width: 100%;
             height: 300px;
         }
-        div{
+        .sdiv{
             width: 90%;
             height: 70%;
             margin-bottom:100px;
@@ -25,9 +25,8 @@
 </head>
 
 <body bgcolor="#21202D">
-    <div style="color:#F00" id="taskname"></div>
-    <div class="sdiv" id="main"></div>
-
+    <div style="color:#ffffff" id="taskname"></div>
+    <br>
 
     <script type="text/javascript">
         setInterval(function () {
