修改标题数据

--- a/static/template/ktemp.html
+++ b/static/template/ktemp.html
@@ -25,7 +25,7 @@
 </head>
 
 <body bgcolor="#21202D">
-    <div style="color:#ffffff" id="taskname"></div>
+    <div style="color: #ffffff;font-size: 32px;" id="taskname"></div>
     <br>
 
     <script type="text/javascript">
